--- a/client/src/App.css
+++ b/client/src/App.css
@@ -16,3 +16,10 @@
     min-height: 100vh;
     max-height: 100vh;
 }
+
+.search-result {
+    transition: all .5s;
+}
+.search-result:hover {
+    box-shadow: 0px 5px 10px 1px rgba(0, 0, 0, 0.5);
+}
