Bugfix Search + Queue (Queue Add-Delete-Shuffle-Reset)

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -23,3 +23,8 @@
 .search-result:hover {
     box-shadow: 0px 5px 10px 1px rgba(0, 0, 0, 0.5);
 }
+
+
+.track-selected {
+    background-color: #aaaaaa;
+}
